# AI-Detector

./: IEEE_Paper.md  LICENSE  README.md  pyproject.toml  requirements.txt
ai-detector/: __init__.py  app.py  cli.py
ai-detector/audio/: __init__.py  config.py  detector.py  models.py  processor.py
ai-detector/image/: __init__.py  detector.py
tests/: test_audio_detector.py  test_audio_processor.py  test_image_detector.py
